# Logs_analyser

./: AccountsSummary_2020.txt  CMakeLists.txt  IObserver.hpp  IPublisher.hpp  InterfaceMocks.cpp  InterfaceMocks.hpp  Main.cpp  MyAtomicFileForTest.txt  Observer.cpp  Observer.hpp  Publisher.cpp  Publisher.hpp  README.md  ReportSummary.txt  Source.cpp  SourceMocks.cpp  SourceTests.cpp
include/: Observer.hpp  Publisher.hpp
interfaces/: IObserver.hpp  IPublisher.hpp
sources/: Observer.cpp  Publisher.cpp
tests/: AccountsSummary_2020.txt  CMakeLists.txt  InterfaceMocks.hpp  SourceMocks.cpp  SourceTests.cpp
